WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158161
Fix the build with newer clang and other custom configuration options
https://bugs.webkit.org/show_bug.cgi?id=158161
Summary
Fix the build with newer clang and other custom configuration options
Alexey Proskuryakov
Reported
2016-05-27 12:48:37 PDT
Fix the build with newer clang and other custom configuration options.
Attachments
proposed fix
(7.58 KB, patch)
2016-05-27 12:58 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
with a pragma
(6.55 KB, patch)
2016-05-27 15:36 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(6.88 KB, patch)
2016-05-27 16:26 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
patch for landing
(6.87 KB, patch)
2016-05-28 13:37 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2016-05-27 12:58:06 PDT
Created
attachment 279984
[details]
proposed fix
WebKit Commit Bot
Comment 2
2016-05-27 13:00:47 PDT
Attachment 279984
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/mac/CookieStorageShimLibrary.cpp:85: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2016-05-27 13:01:31 PDT
Anders suggested marking *SPI.h headers as system headers using a pragma. I think we should do that instead of suppressing individual warning in them.
Alexey Proskuryakov
Comment 4
2016-05-27 13:10:29 PDT
Seems reasonable. How does one do that? I don't remember if we ever had any useful warnings in SPI headers, although I'm also not sure whether I would remember if we did.
mitz
Comment 5
2016-05-27 13:32:24 PDT
(In reply to
comment #4
)
> Seems reasonable. How does one do that?
#pragma clang system_header
Alexey Proskuryakov
Comment 6
2016-05-27 15:36:20 PDT
Created
attachment 280003
[details]
with a pragma
WebKit Commit Bot
Comment 7
2016-05-27 15:39:25 PDT
Attachment 280003
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/mac/CookieStorageShimLibrary.cpp:85: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 8
2016-05-27 16:26:20 PDT
Created
attachment 280011
[details]
proposed fix Reverted too much when changing CFNetworkSPI.h.
WebKit Commit Bot
Comment 9
2016-05-27 16:28:47 PDT
Attachment 280011
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/mac/CookieStorageShimLibrary.cpp:85: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 10
2016-05-27 21:55:53 PDT
Comment on
attachment 280011
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=280011&action=review
> Source/WebCore/platform/spi/mac/AVFoundationSPI.h:68 > +@interface AVAssetCache (Details)
We have stopped using categories for this, instead using class extensions, like in CFNetworkSPI.h above.
> Source/WebKit2/ChangeLog:9 > + * NetworkProcess/ios/NetworkProcessIOS.mm: -setAllowsSpecificHTTPSCertificate:forHost: > + is not in CFNetworkSPI.h
“not”?
Alexey Proskuryakov
Comment 11
2016-05-28 13:37:24 PDT
Created
attachment 280047
[details]
patch for landing
WebKit Commit Bot
Comment 12
2016-05-28 13:40:31 PDT
Attachment 280047
[details]
did not pass style-queue: ERROR: Source/WebKit2/Shared/mac/CookieStorageShimLibrary.cpp:85: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 13
2016-05-28 16:15:37 PDT
Comment on
attachment 280047
[details]
patch for landing Clearing flags on attachment: 280047 Committed
r201492
: <
http://trac.webkit.org/changeset/201492
>
WebKit Commit Bot
Comment 14
2016-05-28 16:15:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug