Source/WebCore/platform/spi/mac/AVFoundationSPI.h
@@ -58,8 +58,14 @@ NS_ASSUME_NONNULL_END
 #if USE(APPLE_INTERNAL_SDK)
 #import <AVFoundation/AVAssetCache_Private.h>
 #else
-NS_ASSUME_NONNULL_BEGIN
+#if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200) || (PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 100000)
+#import <AVFoundation/AVAssetCache.h>
+#else
 @interface AVAssetCache : NSObject
+@end
+#endif
+NS_ASSUME_NONNULL_BEGIN
+@interface AVAssetCache ()
 + (AVAssetCache *)assetCacheWithURL:(NSURL *)URL;
 - (id)initWithURL:(NSURL *)URL;
 - (NSArray *)allKeys;
